--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -18,6 +18,9 @@
     {% block head %}{% endblock %}
 </head>
 <body class="bg-light">
+    <!-- Loading Overlay (global) -->
+    {% include 'atoms/loading_overlay.html' %}
+    
     <!-- Flash Messages -->
     {% include 'organisms/flash_messages.html' %}
     
@@ -26,6 +29,9 @@
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Loading Utilities -->
+    <script src="{{ url_for('static', filename='js/loading_utils.js') }}"></script>
     
     {% block scripts %}{% endblock %}
 </body>
