refactor(molecules): use button

--- a/app/templates/atoms/button.html
+++ b/app/templates/atoms/button.html
@@ -5,7 +5,9 @@
         {% if onclick %}onclick="{{ onclick }}"{% endif %}
         {% if disabled %}disabled{% endif %}
         {% if data_bs_toggle %}data-bs-toggle="{{ data_bs_toggle }}"{% endif %}
-        {% if data_bs_target %}data-bs-target="{{ data_bs_target }}"{% endif %}>
+        {% if data_bs_target %}data-bs-target="{{ data_bs_target }}"{% endif %}
+        {% if data_bs_dismiss %}data-bs-dismiss="{{ data_bs_dismiss }}"{% endif %}
+        {% if aria_label %}aria-label="{{ aria_label }}"{% endif %}>
     {% if icon %}<i class="{{ icon }} me-1"></i>{% endif %}
     {{ text|default('') }}
 </button>
